// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":false,"priority":"High"} 1`] = `
"<div to=\\"\\" class=\\"group block\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 pb-3 pr-3 pt-2\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 whitespace-nowrap text-xs font-normal text-vanilla-400\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap gap-x-4 text-xs\\">
        <div class=\\"cursor flex items-center gap-x-1 rounded-full bg-ink-200 px-1.5 py-1 uppercase\\">
          <zicon-stub icon=\\"ellipsis-small\\" size=\\"x-small\\" class=\\"-mx-0.5\\"></zicon-stub> <span class=\\"text-xxs font-medium tracking-wide text-vanilla-400\\">

  </span>
        </div>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">
          Python
        </span>
        </div>
        <meta-data-item icon=\\"security\\">
          Security
        </meta-data-item>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\"></div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":false,"priority":"Low"} 1`] = `
"<div to=\\"\\" class=\\"group block\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 pb-3 pr-3 pt-2\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 whitespace-nowrap text-xs font-normal text-vanilla-400\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap gap-x-4 text-xs\\">
        <div class=\\"cursor flex items-center gap-x-1 rounded-full bg-ink-200 px-1.5 py-1 uppercase\\">
          <zicon-stub icon=\\"ellipsis-small\\" size=\\"x-small\\" class=\\"-mx-0.5\\"></zicon-stub> <span class=\\"text-xxs font-medium tracking-wide text-vanilla-400\\">

  </span>
        </div>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">
          Python
        </span>
        </div>
        <meta-data-item icon=\\"security\\">
          Security
        </meta-data-item>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\"></div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":false,"priority":"Medium"} 1`] = `
"<div to=\\"\\" class=\\"group block\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 pb-3 pr-3 pt-2\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 whitespace-nowrap text-xs font-normal text-vanilla-400\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap gap-x-4 text-xs\\">
        <div class=\\"cursor flex items-center gap-x-1 rounded-full bg-ink-200 px-1.5 py-1 uppercase\\">
          <zicon-stub icon=\\"ellipsis-small\\" size=\\"x-small\\" class=\\"-mx-0.5\\"></zicon-stub> <span class=\\"text-xxs font-medium tracking-wide text-vanilla-400\\">

  </span>
        </div>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">
          Python
        </span>
        </div>
        <meta-data-item icon=\\"security\\">
          Security
        </meta-data-item>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\"></div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":false,"priority":"noop"} 1`] = `
"<div to=\\"\\" class=\\"group block\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 pb-3 pr-3 pt-2\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 whitespace-nowrap text-xs font-normal text-vanilla-400\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap gap-x-4 text-xs\\">
        <div class=\\"cursor flex items-center gap-x-1 rounded-full bg-ink-200 px-1.5 py-1 uppercase\\">
          <zicon-stub icon=\\"ellipsis-small\\" size=\\"x-small\\" class=\\"-mx-0.5\\"></zicon-stub> <span class=\\"text-xxs font-medium tracking-wide text-vanilla-400\\">
    no priority
  </span>
        </div>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">
          Python
        </span>
        </div>
        <meta-data-item icon=\\"security\\">
          Security
        </meta-data-item>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\"></div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":true,"priority":"High"} 1`] = `
"<div to=\\"\\" class=\\"group block\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 pb-3 pr-3 pt-2\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 whitespace-nowrap text-xs font-normal text-vanilla-400\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap gap-x-4 text-xs\\">
        <z-menu width=\\"x-small\\" direction=\\"right\\"></z-menu>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">
          Python
        </span>
        </div>
        <meta-data-item icon=\\"security\\">
          Security
        </meta-data-item>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\">
      <div class=\\"mt-1 flex h-full justify-end\\">
        <zbutton-stub size=\\"small\\" button-type=\\"ghost\\" icon=\\"minus-circle\\" color=\\"cherry\\" data-testid=\\"unset-issue-priority\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
      </div>
    </div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":true,"priority":"Low"} 1`] = `
"<div to=\\"\\" class=\\"group block\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 pb-3 pr-3 pt-2\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 whitespace-nowrap text-xs font-normal text-vanilla-400\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap gap-x-4 text-xs\\">
        <z-menu width=\\"x-small\\" direction=\\"right\\"></z-menu>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">
          Python
        </span>
        </div>
        <meta-data-item icon=\\"security\\">
          Security
        </meta-data-item>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\">
      <div class=\\"mt-1 flex h-full justify-end\\">
        <zbutton-stub size=\\"small\\" button-type=\\"ghost\\" icon=\\"minus-circle\\" color=\\"cherry\\" data-testid=\\"unset-issue-priority\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
      </div>
    </div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":true,"priority":"Medium"} 1`] = `
"<div to=\\"\\" class=\\"group block\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 pb-3 pr-3 pt-2\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 whitespace-nowrap text-xs font-normal text-vanilla-400\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap gap-x-4 text-xs\\">
        <z-menu width=\\"x-small\\" direction=\\"right\\"></z-menu>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">
          Python
        </span>
        </div>
        <meta-data-item icon=\\"security\\">
          Security
        </meta-data-item>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\">
      <div class=\\"mt-1 flex h-full justify-end\\">
        <zbutton-stub size=\\"small\\" button-type=\\"ghost\\" icon=\\"minus-circle\\" color=\\"cherry\\" data-testid=\\"unset-issue-priority\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
      </div>
    </div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":true,"priority":"noop"} 1`] = `
"<div to=\\"\\" class=\\"group block\\">
  <!---->
  <div class=\\"flex w-full flex-1 flex-wrap\\">
    <div class=\\"space-y-1 border-slate-400 text-sm text-vanilla-400 w-full md:w-4/5 pb-3 pr-3 pt-2\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 whitespace-nowrap text-xs font-normal text-vanilla-400\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap gap-x-4 text-xs\\">
        <z-menu width=\\"x-small\\" direction=\\"right\\"></z-menu>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">
          Python
        </span>
        </div>
        <meta-data-item icon=\\"security\\">
          Security
        </meta-data-item>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\">
      <div class=\\"mt-1 flex h-full justify-end\\">
        <zbutton-stub size=\\"small\\" button-type=\\"ghost\\" icon=\\"minus-circle\\" color=\\"cherry\\" data-testid=\\"unset-issue-priority\\" class=\\"v-popper--has-tooltip\\"></zbutton-stub>
      </div>
    </div>
  </div>
</div>"
`;
